--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-status-bar-height": "^2.5.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
