--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.4.4",
     "@react-navigation/drawer": "^5.7.4",
-    "@react-navigation/native": "^5.3.2",
+    "@react-navigation/native": "^5.4.0",
     "@react-navigation/stack": "^5.3.5",
+    "jetifier": "^1.6.5",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
